--- a/articles/RJ-2025-001/hernandez-dorado.tex
+++ b/articles/RJ-2025-001/hernandez-dorado.tex
@@ -57,10 +57,10 @@ A CFA estimation of this structure can be specified by constraining to zero the 
 
 Suppose now that the \textbf{content} structure of our example is that in \cref{tab1} but, at the same time, the item responses are also partly affected by AR, conceptualized as an additional non-content factor (see \cref{tab2} below). Now, even though the content structure was correct, if the specified two-factor structure above was directly fitted to \textbf{R}, two types of distorted results would be expected. First, the goodness of model-data fit would not be good. Second, the loading and inter-factor correlation estimates would be biased with respect to the parameter values in (2) \citep[see e.g.][]{DeMars:2014, Ferrando:2010}.
 
-The rationale of SIREN can now be explained from the results above. At the calibration level, the basic idea is to obtain a corrected or cleaned covariance/correlation matrix $\bf{R_{corr}}$ in which the impact of the ACQ factor has been partialled-out. If this is done correctly, a specified restricted CFA solution can be next fitted to $\bf{R_{corr}}$  instead of $\bf{R}$ . This solution will now fit well, and the ‘true’ content parameters in \cref{tab1} will be well recovered.
+The rationale of SIREN can now be explained from the results above. At the calibration level, the basic idea is to obtain a corrected or cleaned covariance/correlation matrix $\mathbf{R}_{corr}$ in which the impact of the ACQ factor has been partialled-out. If this is done correctly, a specified restricted CFA solution can be next fitted to $\mathbf{R}_{corr}$  instead of $\mathbf{R}$. This solution will now fit well, and the ‘true’ content parameters in \cref{tab1} will be well recovered.
 At the scoring level, once the ACQ and the content structures have been properly estimated, ACQ and content individual score estimates (i.e. factor scores) can be next obtained based on the unrestricted ACQ pattern and the restricted, CFA content solution.
 
-As mentioned above, in order to control for the impact of AR, the items of the questionnaire have to be fully or partially balanced. In the present scenario, the condition of full balance implies that, within each factor, half of the items that define this factor are positively keyed and the other half are negatively keyed. The condition of partial balance implies here that all the factors contain positively and negatively keyed items, but that the number of positive and negative items is not the same at least in one factor \citep[e.g.][]{Lorenzo-Seva:2009}
+As mentioned above, in order to control for the impact of AR, the items of the questionnaire have to be fully or partially balanced. In the present scenario, the condition of full balance implies that, within each factor, half of the items that define this factor are positively keyed and the other half are negatively keyed. The condition of partial balance implies here that all the factors contain positively and negatively keyed items, but that the number of positive and negative items is not the same at least in one factor \citep[e.g.][]{Lorenzo-Seva:2009}.
 
 We shall now illustrate the points so far discussed with our toy example. Suppose now that the full content plus ACQ structure in the population is that in \cref{tab2}. As the content pattern loadings show, however, the practitioner has done her work well and, within each factor, the items are fully balanced:  within each content factor, half of the loadings are positive and half negative. As for the ACQ factor, (a) all the loadings are positive, and (b) they are smaller in magnitude than the content loadings. Both features are expected in empirical applications. First, AR is the tendency to agree with the item regardless of the direction in content (hence all loadings are expected to be positive). Second, in a well-designed measure, the item responses are expected to be far more determined by the content they measure than by ACQ.
 
@@ -102,7 +102,7 @@ We propose a general multi-stage procedure in which the number of stages depends
 
 Although the sequential rationale just described is conceptually the clearest, the structural solution at the second stage above can actually be specified and fitted in two ways. The first way directly follows from the corrected-correlation-matrix concept: to fit a CFA solution to a reduced correlation matrix which is free from ACQ. In the \pkg{siren} package, this way of fitting the model corresponds to the ‘resid’ method option (i.e. use the residual or corrected matrix as input for the CFA) as defined below. The second way is to take the estimated ACQ loadings obtained at the first stage as if they were fixed and known, and next to specify a full CFA solution that includes an additional ACQ factor with loadings fixed at the obtained values. In the \pkg{siren} package, this second choice corresponds to the ‘fixed’ method option defined below.  As we shall see, the results from both approaches must be the same. In either case, the corrected or residual correlation matrix is provided in the output of the SIREN package under the heading “rresidmatrix”.
 
-The explanation above allows the relation between SIREN and previous approaches to be discussed in more detail. If the solution is specified in the first way above (‘resid’ method option), SIREN can be viewed as a particular application of a residual covariance analysis approach, i.e. to initially correct a covariance or a correlation matrix for unwanted effects before it is used as input for further structural analyses \citep[e.g.][] {Andrews:1984, Asparouhov:2023, DeCastellarnau:2021, tenBerge:1999}
+The explanation above allows the relation between SIREN and previous approaches to be discussed in more detail. If the solution is specified in the first way above (‘resid’ method option), SIREN can be viewed as a particular application of a residual covariance analysis approach, i.e. to initially correct a covariance or a correlation matrix for unwanted effects before it is used as input for further structural analyses \citep[e.g.][] {Andrews:1984, Asparouhov:2023, DeCastellarnau:2021, tenBerge:1999}.
 
 If the second equivalent specification above: full CFA solution that includes the additional fixed ACQ factor (‘fixed’ method option), is used instead, then SIREN can be regarded as a modification of the CFA approach initially proposed by \citet{Billiet:2000}. In effect, in the latter, the ACQ loadings are fixed all of them to unity for identification purposes (which is generally unrealistic). In contrast, in SIREN these loadings are fixed at the (possibly different) values estimated at the first stage.
 
@@ -134,9 +134,9 @@ The specific stages in this case are:
 
 Stage 1: for the $n$ test items, the ACQ factor loadings are estimated by: (a) obtaining the direct (canonical) MRFA solution from the inter-item correlation matrix, by specifying $m+1$ factors (b) obtaining the first centroid from the inter-item correlation matrix (to be used as criterion), and (c) rotating the MRFA solution to the position in which the first canonical MRFA factor has maximal congruence with respect to the criterion. Essentially, the process is a target rotation against a single target vector (the first centroid). However, because the canonical MRFA solution is orthogonal, the rotation is univocally defined. Finally, the criterion of maximal congruence is defined in least squares terms: i.e. the first rotated MRFA factor is that is the closest to the target centroid in the least-squares sense.
 
-Stage 2: obtain the corrected (i.e. ACQ free) inter-item residual matrix as $\bf{R_{corr}}$ = $\bf{R}$ $ - \boldsymbol{\alpha}$$\boldsymbol{\alpha}^{'}$. The $\bf{R_{corr}}$ matrix is, and should be treated as, a residual covariance matrix (not a correlation matrix).
+Stage 2: obtain the corrected (i.e. ACQ free) inter-item residual matrix as $\mathbf{R}_{corr}$ = $\bf{R}$ $ - \boldsymbol{\alpha}$$\boldsymbol{\alpha}^{'}$. The $\mathbf{R}_{corr}$ matrix is, and should be treated as, a residual covariance matrix (not a correlation matrix).
 
-Stage 3: The prescribed CFA solution can be specified and fitted in two alternative ways. The first is to input $\bf{R_{corr}}$ specified as a covariance matrix to the SEM program, and request a standardized solution. The output will consist of the standardized content pattern with loadings that are free of ACQ. The second way is to input the raw data to the SEM program, by specifying the prescribed CFA content solution, plus an additional ACQ factor in which all the loadings are specified as fixed and known. In this second specification, the ACQ loadings $\boldsymbol{\alpha}$ obtained in stage 2 cannot be imputed directly because $\bf{R_{corr}}$ is a covariance matrix (i.e. unstandardized) while the loadings on $\boldsymbol{\alpha}$ are standardized. The correct values to be imputed are thus those obtained by multiplying each standardized loading on $\boldsymbol{\alpha}$  by the corresponding item standard deviation: $\boldsymbol{\alpha_{x}}$(scaled)$=\boldsymbol{\alpha_{x}}\bf{sx}$. This scaling transforms the standardized loadings $\boldsymbol{\alpha}$ into unstandardized loadings \citep[e.g.][]{Bollen:1989}. As in the first approach, a standardized solution will next be requested in the output. If this is done, the output will now  provide the standardized content pattern with loadings free from ACQ and an additional column containing the standardized ACQ loadings. Indeed, the standardized content pattern must be the same in both specifications. In the pkg {siren} programming, the CFA in stage 3 is done by using the cfa function from the \CRANpkg{lavaan} and one of the two options described above. However, of the multiple choices that the program allows for estimating the structural item content parameters, we have chosen the one that is most congruent with the previous stages. Thus, whether the variables are treated as continuous or discrete, the estimation procedure is robust ULS, in agreement with the choice of MRFA-ULS for obtaining the ACQ estimates.
+Stage 3: The prescribed CFA solution can be specified and fitted in two alternative ways. The first is to input $\mathbf{R}_{corr}$ specified as a covariance matrix to the SEM program, and request a standardized solution. The output will consist of the standardized content pattern with loadings that are free of ACQ. The second way is to input the raw data to the SEM program, by specifying the prescribed CFA content solution, plus an additional ACQ factor in which all the loadings are specified as fixed and known. In this second specification, the ACQ loadings $\boldsymbol{\alpha}$ obtained in stage 2 cannot be imputed directly because $\mathbf{R}_{corr}$ is a covariance matrix (i.e. unstandardized) while the loadings on $\boldsymbol{\alpha}$ are standardized. The correct values to be imputed are thus those obtained by multiplying each standardized loading on $\boldsymbol{\alpha}$  by the corresponding item standard deviation: $\boldsymbol{\alpha_{x}}$(scaled)$=\boldsymbol{\alpha_{x}}\bf{sx}$. This scaling transforms the standardized loadings $\boldsymbol{\alpha}$ into unstandardized loadings \citep[e.g.][]{Bollen:1989}. As in the first approach, a standardized solution will next be requested in the output. If this is done, the output will now  provide the standardized content pattern with loadings free from ACQ and an additional column containing the standardized ACQ loadings. Indeed, the standardized content pattern must be the same in both specifications. In the pkg {siren} programming, the CFA in stage 3 is done by using the cfa function from the \CRANpkg{lavaan} and one of the two options described above. However, of the multiple choices that the program allows for estimating the structural item content parameters, we have chosen the one that is most congruent with the previous stages. Thus, whether the variables are treated as continuous or discrete, the estimation procedure is robust ULS, in agreement with the choice of MRFA-ULS for obtaining the ACQ estimates.
 
 Stage 4: testing model-data fit at the structural level. Again, we have made choices within \CRANpkg{lavaan} that are in accordance with the limited-information nature of the procedure as well as with the results of the simulation study. The chosen indices are: (a) the RMSR and GFI as overall measures of misfit \citep{McDonald:1995}, (b) the RMSEA as a measure of relative fit with respect to the degrees of freedom (i.e. model complexity), and (c) the CFI as a measure of comparative fit with respect to the null independence model \citep[see][for points b and c]{Tanaka:1993}. These indices are provided in the SIREN package output under the heading ‘rfit\_indices’.
 
@@ -422,7 +422,7 @@ In this framework, \pkg{siren} barely suffers from a lack of specification or bi
 
 \section{Illustrative example usage}
 
-To illustrate how the SIREN program works, we have used an existing dataset of 1309 participants (55.8\% females) between 14 and 19 years old (M = 16.4, S.D. = 1.1) from three previous studies \citep{Morales-Vives:2018, Morales-Vives:2020, Morales-Vives:inpress}. Therefore, further details about this data can be obtained from the original studies. Those participants with missing data were not included in the present illustrative analyses. All participants answered the Psychological Maturity Assessment Scale questionnaire \citep[PSYMAS]{Morales-Vives:2013}, which assesses the psychological maturity of adolescents, understood as the ability to take responsibility for one's own obligations, taking into account one's own characteristics and needs, without showing excessive dependence on others. It consists of 27 items with a five-point response format (1 = Completely disagree, 5 = Completely agree) and it assesses the following factors: work orientation, self-reliance, and identity. The study carried out by  \citep{Morales-Vives:2013}, shows that (a) the content factors are correlated, and (b) some of the items are affected by the acquiescence response bias. This second feature is the reason why we chose the data from this questionnaire as an illustration of how \pkg{siren} works and how its outcomes are to be interpreted. In the current analysis, we have only used ten items from two of the subscales of this questionnaire (four items of self-reliance subscale and six items of identity subscale) so that within each subscale half of the items were in one direction (lack of maturity) and the other half in the opposite direction (high maturity). Self-reliance refers to willingness to take the initiative without allowing others to exercise excessive control, and Identity refers to knowledge about one’s characteristics and needs. \cref{tab7} shows the contents of the used items. We would note that the dataset is available in the \pkg{siren}  package, so that the interested reader can run the program and verify the results that are presented below.
+To illustrate how the SIREN program works, we have used an existing dataset of 1309 participants (55.8\% females) between 14 and 19 years old (M = 16.4, S.D. = 1.1) from three previous studies \citep{Morales-Vives:2018, Morales-Vives:2020, Morales-Vives:inpress}. Therefore, further details about this data can be obtained from the original studies. Those participants with missing data were not included in the present illustrative analyses. All participants answered the Psychological Maturity Assessment Scale questionnaire \citep[PSYMAS]{Morales-Vives:2013}, which assesses the psychological maturity of adolescents, understood as the ability to take responsibility for one's own obligations, taking into account one's own characteristics and needs, without showing excessive dependence on others. It consists of 27 items with a five-point response format (1 = Completely disagree, 5 = Completely agree) and it assesses the following factors: work orientation, self-reliance, and identity. The study carried out by  \citet{Morales-Vives:2013}, shows that (a) the content factors are correlated, and (b) some of the items are affected by the acquiescence response bias. This second feature is the reason why we chose the data from this questionnaire as an illustration of how \pkg{siren} works and how its outcomes are to be interpreted. In the current analysis, we have only used ten items from two of the subscales of this questionnaire (four items of self-reliance subscale and six items of identity subscale) so that within each subscale half of the items were in one direction (lack of maturity) and the other half in the opposite direction (high maturity). Self-reliance refers to willingness to take the initiative without allowing others to exercise excessive control, and Identity refers to knowledge about one’s characteristics and needs. \cref{tab7} shows the contents of the used items. We would note that the dataset is available in the \pkg{siren}  package, so that the interested reader can run the program and verify the results that are presented below.
 
 The code required for running this illustrative example is the following:
 
@@ -486,7 +486,7 @@ The fit of the solution on \cref{tab8} was quite acceptable: GFI=.99, RMSR=.04, 
 
 \section{Concluding remarks}
 
-There are at present two factor-analytic approaches for calibrating and scoring typical-response measures after controlling for the biasing effects of AR. One of them is fully confirmatory, and the complete solution is identified by fixing all the ACQ loadings to the same value. The other is unrestricted (i.e. exploratory or semi-confirmatory). According to the literature, each of the two approaches has its pros and cons \citep{Savalei:2014, delaFuente:2020}
+There are at present two factor-analytic approaches for calibrating and scoring typical-response measures after controlling for the biasing effects of AR. One of them is fully confirmatory, and the complete solution is identified by fixing all the ACQ loadings to the same value. The other is unrestricted (i.e. exploratory or semi-confirmatory). According to the literature, each of the two approaches has its pros and cons \citep{Savalei:2014, delaFuente:2020}.
 
 In this article we have proposed a hybrid EFA-CFA procedure, called SIREN, that tries to combine the best features of the two approaches above. Thus, in SIREN, the ACQ factor can be identified in a first step without the need to constrain all its loadings to have the same value. Next, once the ACQ factor is identified, a fully confirmatory (restricted) solution can be specified for the content factors at the second step. Finally, for both types of factors (ACQ and content), our proposed procedure allows factor score estimates for each individual to be obtained at the third step. The flexibility of what we propose widens the available options for assessing the structural properties of the typical-response measure under scrutiny, and also, for obtaining accurate score estimates for each individual. Regarding this last point, we would note that most existing factor-analytical developments designed for controlling ACQ tend to focus solely on the structural properties of the instrument. However, accurate and “clean” individual score estimates might be highly relevant in further validity studies or if clinical decisions have to be taken on the basis of this instrument.
 
