--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -16,8 +16,6 @@ Articles for the R Journal should be no more than 20 pages, on topics of interes
 
 # Creating your article
 
-We currently accept submissions in Rmarkdown or LaTeX. Rmarkdown using the [rjtools package](https://rjournal.github.io/rjtools/) is preferred. ***From January 2026, only Rmarkdown articles will be accepted***.
-
 ### Rmarkdown using rjtools
 
 The [rjtools](https://rjournal.github.io/rjtools/) package has a template to create the files needed for a submission in the form required by the R Journal.
@@ -40,7 +38,7 @@ The `rticles::rjournal_article` output format has been deprecated in favour of `
 
 We strongly encourage you to use Rmarkdown with the `rjtools` package. It makes the submission more reproducible, and makes it easier to render your article in both HTML and PDF formats.
 
-However, we still accept articles written in LaTeX, although they may be processed more slowly. From January 2026, LaTeX submissions will no longer be accepted.
+For now, we still accept submissions written in LaTeX, but they will be processed more slowly. 
 
 If you do use LaTeX, you must use the [LaTeX template](https://github.com/rjournal/share/raw/refs/heads/master/RJtemplate.zip). Instructions on using this template are provided in the [LaTeX author guide](https://github.com/rjournal/share/raw/refs/heads/master/author-guide.pdf). LaTeX submissions that do not follow these guidelines will be rejected without review.
 
