--- a/R_package_guidelines.Rmd
+++ b/R_package_guidelines.Rmd
@@ -12,23 +12,36 @@ d-article > * {
 }
 ```
 
-R Journal articles that describe R packages should follow these guidelines:
+R Journal articles that describe R packages should follow these guidelines.
+
+## Requirements for consideration
 
 * The package must be available on CRAN or Bioconductor.
 * The content of the package should be substantial and would likely be of significant interest and use within the R community.
 * The accompanying paper should clearly demonstrate the use of the package and its advantages over any competing packages or existing approaches. 
-* There must be a proper version control system in place. e.g., the package could be housed on GitHub, GitLab or BitBucket.
-* There should be a bug reporting mechanism in place, e.g., GitHub issues or similar.
-* Include unit tests to ensure the package works as expected. The [testthat](https://testthat.r-lib.org/) package is a good choice for this.
-* Functions should use a consistent naming scheme, e.g., snake_case or camelCase.
-* Code should follow a consistent style, e.g., use [Air](https://posit-dev.github.io/air/) or follow the [tidyverse style guide](https://style.tidyverse.org/).
+* The package must include unit tests to verify functionality.
 * Each user-facing function must be fully documented with all terms and arguments explained, and examples provided. Even better would be an additional vignette describing the full workflow for an analysis using the package. 
-* Use object-oriented programming where appropriate. For example, if you have a special plotting function, consider implementing a class and defining a `plot()` method for it. If your package creates large list objects, add a class and a suitable `print` method.
-* Use `message()` or `warning()` rather than `cat()` or `print()` within functions (other than `print` methods).
-* Avoid saving output to files unless it is really necessary.
-* Avoid reading input from files, unless you are providing a function to read a new type of file format.
-* Use `TRUE` not `T`, and `FALSE` not `F`, and avoid using `T` and `F` as variable names.
-* If your package contains data, include a data-raw folder containing code for reproducing the data objects. See https://r-pkgs.org/data.html
-* Follow common R package conventions as much as possible.
-* Having the code documentation available online is desirable, e.g., as a [pkgdown](https://pkgdown.r-lib.org/) site on GitHub pages.
-* Additional detailed guidance on good R package development practice can be found at <https://stats-devguide.ropensci.org/>, although we do not require all of their recommendations to be followed.
+* Include a vignette describing a full workflow or example analysis
+* Use a version control system (e.g., GitHub, GitLab, BitBucket, R-Forge)
+
+## Recommended best practices
+
+In addition, we strong recommend that package authors follow common R package conventions, including but not limited to:
+
+* Offer a bug reporting mechanism, such as GitHub issues.
+* Use a consistent naming scheme for functions (e.g., snake_case or camelCase).  
+* Follow a consistent code style, such as the [tidyverse](https://style.tidyverse.org/) or [Google](https://google.github.io/styleguide/Rguide.html) style guides. A code formatter such as [Air](https://posit-dev.github.io/air/) or [styler](https://styler.r-lib.org/) can help enforce consistent style.
+* Use object-oriented programming where appropriate (e.g., define `plot()` or `print()` S3 methods for custom classes).  
+* Use `message()` or `warning()` instead of `cat()` or `print()` within functions (except in `print` methods).  
+* Avoid reading or writing files unless essential to the package's purpose.  
+* Use `TRUE` and `FALSE` explicitly; avoid `T` and `F` as values or variable names.  
+* If the package contains data, include a data-raw directory with code for data generation or cleaning.  
+* Make documentation available on a standalone website online (e.g., via [pkgdown](https://pkgdown.r-lib.org/)).
+
+## Additional resources
+
+To learn about best practices in R package development, authors are encouraged to consult these resources:
+
+* [Writing R extensions](https://cran.r-project.org/doc/manuals/r-devel/R-exts.html)
+* [R Packages](https://r-pkgs.org/)
+* [The rOpenSci development guide](https://stats-devguide.ropensci.org/)
